# aws_ec2_analyzer

./: .gitignore  Cargo.toml  README.md  ec2.py  rust-toolchain.toml
src/: analyze_efas.rs  availability_zone.rs  ec2.rs  instance.rs  lib.rs  main.rs  pricing.rs  print_instances.rs  printer.rs  region.rs  sql.rs
src/print/: print_filtered_instances.rs  print_get_instance_types.rs  print_images.rs  print_ondemand_regions.rs  print_reservation_regions.rs  print_spot_placement.rs  print_spot_regions.rs
src/print_ondemand_region/: print_ondemand_regions.rs
src/print_spot_region/: data_collector.rs  print_spot_regions.rs  printer.rs  reorder.rs  spot_region.rs
src/render/: render_spot_region.rs  render_spot_zone.rs
