[package]
name = "aws_ec2_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
anyhow = "1.0.75"
num-traits = "0.2.17"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing-subscriber = "0.3.18"

pretty_assertions = "1.4.0"

aws-sdk-ec2 = "1.67.0"
aws-sdk-pricing = "1.41.0"

aws-config = "1.5.5"
aws-types = "1.3.3"
aws-smithy-types-convert = {version = "0.60.8", features = ["convert-chrono"] }

# bug fix
time = "0.3.36"

[profile.release]
lto = "thin"
