[package]
name = "aws_ec2_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt"] }
anyhow = "1.0.75"
num-traits = "0.2.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.20"

pretty_assertions = "1.4.0"

aws-sdk-ec2 = "1.161.0"
aws-sdk-pricing = "1.86.0"

aws-config = "1.8.5"
aws-types = "1.3.8"
aws-smithy-types-convert = {version = "0.60.9", features = ["convert-chrono"] }

[profile.release]
lto = "thin"
