[package]
name = "aws_ec2_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
anyhow = "1.0.100"
num-traits = "0.2.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tracing-subscriber = "0.3.20"

pretty_assertions = "1.4.0"


aws-sdk-ec2 = "1.172.0"
aws-sdk-pricing = "1.89.0"


aws-config = "1.8.8"
aws-types = "1.3.8"
aws-smithy-types-convert = {version = "0.60.10", features = ["convert-chrono"] }

[profile.release]
lto = "thin"
